--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@ function accept() {
 }
 </script>
     <p></p>
-    
+  
     
 
 
@@ -194,6 +194,13 @@ function accept() {
 <p>Do not hack, post code for hacking, or post a link to a code for hacking</p>
 <p>Do not post a link to a virus</p>
 
+	<p>BE RESPECTFUL OF <B>EVERYONE</B></p>
+	<p> Do not harass anyone about their </p>
+	<li>
+		<u>religion</u>
+		<u>gender</u>
+		<u>race</u>
+	</li>
 &nbsp;</div>
 &nbsp;<br>
 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp; <title>Bootstrap Example</title>
