--- a/index.html
+++ b/index.html
@@ -196,11 +196,9 @@ function accept() {
 
 	<p>BE RESPECTFUL OF <B>EVERYONE</B></p>
 	<p> Do not harass anyone about their </p>
-	<li>
-		<u>religion</u>
-		<u>gender</u>
-		<u>race</u>
-	</li>
+	<li>Race</li>
+	<li>Gender</li>
+	<li>Religion</li>
 &nbsp;</div>
 &nbsp;<br>
 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp; <title>Bootstrap Example</title>
